Added better documentation, finished removing references to old models
