# docs/swagger.json
@@ -7,16 +7,79 @@
         "version": "1.0"
     },
     "paths": {
-        "/trips/{id}/spendings": {
-            "get": {
+        "/groups/{id}/transactions": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
-                "summary": "Returns all the spending from this trip",
+                "summary": "Creates a transaction",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Trip ID",
+                        "description": "Group ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "The transaction to create",
+                        "name": "transaction",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Transaction"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Transaction"
+                        }
+                    }
+                }
+            }
+        },
+        "/transactions/{id}": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "Updates a transaction",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Transaction ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "The transaction to update",
+                        "name": "transaction",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Transaction"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Transaction"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Deletes a transaction",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Transaction ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -26,7 +89,32 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.Spending"
+                            "$ref": "#/definitions/model.Transaction"
+                        }
+                    }
+                }
+            }
+        },
+        "/trips/{id}/transactions": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "Returns all the spending from this trip",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Group ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Transaction"
                         }
                     }
                 }
@@ -34,7 +122,7 @@
         }
     },
     "definitions": {
-        "api.Spending": {
+        "model.Transaction": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -46,6 +134,9 @@
                 "date": {
                     "type": "string"
                 },
+                "group": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -55,18 +146,15 @@
                 "paidFor": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/api.SpendingPaidFor"
+                        "$ref": "#/definitions/model.TransactionTarget"
                     }
                 },
                 "title": {
                     "type": "string"
-                },
-                "trip": {
-                    "type": "string"
                 }
             }
         },
-        "api.SpendingPaidFor": {
+        "model.TransactionTarget": {
             "type": "object",
             "properties": {
                 "forcePrice": {
